Fix the feature openvpn_clients_revoke

--- a/templates/server.conf.j2
+++ b/templates/server.conf.j2
@@ -130,3 +130,7 @@ plugin {{ openvpn_use_ldap_plugin | default(openvpn_use_ldap_plugin_distribution
 {% for option in openvpn_server_options %}
 {{option}}
 {% endfor %}
+
+{% if openvpn_clients_revoke|length > 0 %}
+crl-verify {{openvpn_keydir}}/crl.pem
+{% endif %}
