Add option for configuring client configuration directory

--- a/templates/server.conf.j2
+++ b/templates/server.conf.j2
@@ -43,6 +43,11 @@ key {{openvpn_keydir}}/server.key  # This file should be kept secret
 # dh1024.pem 1024 Substitute 2048 for 1024 if you are using 2048 bit keys.
 dh {{openvpn_keydir}}/dh{{openvpn_key_size}}.pem
 
+# Client configuration directory.
+{% if openvpn_client_config_dir is defined -%}
+client-config-dir {{ openvpn_client_config_dir }}
+{% endif %}
+
 # Which VPN topology to use? (net30, subnet, p2p)
 {% if openvpn_topology is defined -%}
 topology {{ openvpn_topology }}
