--- a/templates/server.conf.j2
+++ b/templates/server.conf.j2
@@ -43,16 +43,6 @@ key {{openvpn_keydir}}/server.key  # This file should be kept secret
 # dh1024.pem 1024 Substitute 2048 for 1024 if you are using 2048 bit keys.
 dh {{openvpn_keydir}}/dh{{openvpn_key_size}}.pem
 
-# Client configuration directory.
-{% if openvpn_client_config_dir is defined -%}
-client-config-dir {{ openvpn_client_config_dir }}
-{% endif %}
-
-# Which VPN topology to use? (net30, subnet, p2p)
-{% if openvpn_topology is defined -%}
-topology {{ openvpn_topology }}
-{% endif %}
-
 # Configure server mode and supply a VPN subnet for OpenVPN to draw client
 # addresses from. The server will take 10.8.0.1 for itself, the rest will be
 # made available to clients. Each client will be able to reach the server on
@@ -109,6 +99,11 @@ verb {{openvpn_verb}}
 # The maximum number of concurrently connected clients we want to allow.
 max-clients {{openvpn_max_clients}}
 
+# The revoke-full script will generate a CRL (certificate revocation list).
+# all connecting clients will have their client certificates verified against the CRL, 
+# and any positive match will result in the connection being dropped.
+crl-verify crl.pem
+
 # It's a good idea to reduce the OpenVPN daemon's privileges after
 # initialization.
 #
@@ -129,18 +124,27 @@ client-to-client
 {% endif %}
 
 {% if openvpn_use_pam %}
-client-cert-not-required
 plugin {{openvpn_use_pam_plugin|default(openvpn_use_pam_plugin_distribution)}} openvpn
 {% endif %}
 
-{% if openvpn_use_ldap %}
-plugin {{ openvpn_use_ldap_plugin | default(openvpn_use_ldap_plugin_distribution) }} "/etc/openvpn/auth-ldap.conf"
+{% if openvpn_disable_cert %}
+client-cert-not-required
 {% endif %}
 
 {% for option in openvpn_server_options %}
 {{option}}
 {% endfor %}
 
-{% if openvpn_clients_revoke|length > 0  or crl_pem_file.stat.exists %}
-crl-verify {{openvpn_keydir}}/crl.pem
+topology {{ openvpn_topology }}
+
+{% for net in openvpn_push_nets %}
+push "route {{net}}"
+{% endfor %}
+
+{% for dns in openvpn_dns %}
+push "dhcp-option DNS {{dns}}"
+{% endfor %}
+
+{% if openvpn_use_ldap %}
+plugin {{ openvpn_use_ldap_plugin | default(openvpn_use_ldap_plugin_distribution) }} "/etc/openvpn/auth-ldap.conf"
 {% endif %}
