restore old branch

--- a/templates/server.conf.j2
+++ b/templates/server.conf.j2
@@ -43,6 +43,12 @@ key {{openvpn_keydir}}/server.key  # This file should be kept secret
 # dh1024.pem 1024 Substitute 2048 for 1024 if you are using 2048 bit keys.
 dh {{openvpn_keydir}}/dh{{openvpn_key_size}}.pem
 
+{% if openvpn_tls_auth -%}
+# Use a static pre-shared key (PSK)
+tls-auth {{ openvpn_keydir }}/{{ openvpn_tls_key }} 0
+tls-server
+{% endif %}
+
 # Client configuration directory.
 {% if openvpn_client_config_dir is defined -%}
 client-config-dir {{ openvpn_client_config_dir }}
