--- a/templates/client.conf.j2
+++ b/templates/client.conf.j2
@@ -35,9 +35,9 @@ persist-tun
 # SSL/TLS parms. See the server config file for more description.  It's best to
 # use a separate .crt/.key file pair for each client.  A single ca file can be
 # used for all clients.
-ca ca.crt
-cert {{client}}.crt
-key {{client}}.key
+#ca ca.crt
+#cert {{client.1}}.crt
+#key {{client.1}}.key
 
 # Verify server certificate by checking that the certicate has the nsCertType
 # field set to "server".  This is an important precaution to protect against a
@@ -66,3 +66,13 @@ auth-user-pass
 {% for option in openvpn_client_options %}
 {{option}}
 {% endfor %}
+
+<ca>
+{{ openvpn_ca_cert['stdout'] }}
+</ca>
+<cert>
+{{ openvpn_client_certs.results[client.0]['stdout'] }}
+</cert>
+<key>
+{{ openvpn_client_keys.results[client.0]['stdout'] }}
+</key>
