--- a/templates/server.conf.j2
+++ b/templates/server.conf.j2
@@ -161,9 +161,9 @@ crl-verify {{openvpn_keydir}}/crl.pem
 push "route {{ network | ipaddr('network') }} {{ network | ipaddr('netmask') }}"
 {% endfor %}
 
-#{% for item in dns_servers_consul %}
+{% for item in dns_servers_consul %}
 #push "dhcp-option DNS {{ item }}"
-#{% endfor %}
+{% endfor %}
 push "dhcp-option DNS 10.1.3.10"
 
 push "dhcp-option DOMAIN cs.consul"
