Allow using easy-rsa package from system

--- a/templates/vars.j2
+++ b/templates/vars.j2
@@ -2,7 +2,11 @@
 # Do NOT modify this file by hand!
 
 # easy-rsa parameter settings
+{% if openvpn_use_system_easyrsa %}
+export EASY_RSA=/usr/share/easy-rsa
+{% else %}
 export EASY_RSA="{{ openvpn_etcdir }}/easy-rsa"
+{% endif %}
 
 # This variable should point to
 # the requested executables
