--- a/templates/client.conf.j2
+++ b/templates/client.conf.j2
@@ -56,12 +56,6 @@ key-direction 1
 {% endif %}
 
 {% else %}
-
-{% if openvpn_tls_auth %}
-# Use a static pre-shared key (PSK)
-tls-auth {{openvpn_tls_key}} 1
-{%- endif %}
-
 ca ca.crt
 cert {{client}}.crt
 key {{client}}.key
@@ -75,6 +69,11 @@ key {{client}}.key
 # the nsCertType field set to "server".  The build-key-server script in the
 # easy-rsa folder will do this.
 ns-cert-type server
+
+{% if openvpn_tls_auth and not openvpn_unified_client_profiles -%}
+# Use a static pre-shared key (PSK)
+tls-auth {{openvpn_tls_key}} 1
+{% endif %}
 
 # Enable compression on the VPN link. Don't enable this unless it is also
 # enabled in the server config file.
