Updated var.j2 for Redhat
Added check for RedHat easy-rsa

--- a/templates/vars.j2
+++ b/templates/vars.j2
@@ -2,7 +2,13 @@
 
 # easy-rsa parameter settings
 {% if openvpn_use_system_easyrsa %}
-export EASY_RSA=/usr/share/easy-rsa
+
+{% if ansible_os_family == 'RedHat' %}
+    export EASY_RSA=/usr/share/easy-rsa/2.0
+{% else %}
+	export EASY_RSA=/usr/share/easy-rsa
+{% endif %}
+
 {% else %}
 export EASY_RSA="{{ openvpn_etcdir }}/easy-rsa"
 {% endif %}
