--- a/templates/server.conf.j2
+++ b/templates/server.conf.j2
@@ -148,8 +148,8 @@ client-to-client
 {% endif %}
 
 {% if openvpn_use_pam %}
-client-cert-not-required
 plugin {{openvpn_use_pam_plugin|default(openvpn_use_pam_plugin_distribution)}} openvpn
+reneg-sec 0
 {% endif %}
 
 {% if openvpn_use_ldap %}
