--- a/templates/client.conf.j2
+++ b/templates/client.conf.j2
@@ -22,6 +22,7 @@ cipher {{ openvpn_cipher }}
 # to load balance between the servers.
 remote {{openvpn_host}} {{openvpn_port}} udp
 remote {{openvpn_host}} {{openvpn_port}} tcp
+max-routes 1000
 
 # Keep trying indefinitely to resolve the host name of the OpenVPN server.
 # Very useful on machines which are not permanently connected to the internet
@@ -69,6 +70,8 @@ verb {{openvpn_verb}}
 
 {% if openvpn_use_pam or openvpn_use_ldap %}
 auth-user-pass
+auth-nocache
+reneg-sec 0
 {% endif %}
 
 {% for option in openvpn_client_options %}
