--- a/templates/server.conf.j2
+++ b/templates/server.conf.j2
@@ -16,6 +16,7 @@ proto {{ openvpn_proto }}
 
 # Encrypt packets with cipher algorithm
 cipher {{ openvpn_cipher }}
+auth {{ openvpn_auth }}
 
 # "dev tun" will create a routed IP tunnel, "dev tap" will create an ethernet
 # tunnel. Use "dev tap0" if you are ethernet bridging and have precreated a
