--- a/templates/client.conf.j2
+++ b/templates/client.conf.j2
@@ -75,6 +75,10 @@ ns-cert-type server
 tls-auth {{openvpn_tls_key}} 1
 {% endif %}
 
+{% if openvpn_tls_auth and openvpn_tls_cipher %}
+tls-cipher {{ openvpn_tls_cipher | join(':') }}
+{% endif %}
+
 # Enable compression on the VPN link. Don't enable this unless it is also
 # enabled in the server config file.
 {% if openvpn_comp_lzo -%}
