--- a/templates/server.conf.j2
+++ b/templates/server.conf.j2
@@ -51,6 +51,9 @@ dh {{openvpn_keydir}}/dh{{openvpn_key_size}}.pem
 tls-auth {{ openvpn_keydir }}/{{ openvpn_tls_key }} 0
 tls-server
 {% endif %}
+{% if openvpn_tls_auth and openvpn_tls_cipher %}
+tls-cipher {{ openvpn_tls_cipher | join(':') }}
+{% endif %}
 
 # Client configuration directory.
 {% if openvpn_client_config_dir is defined -%}
