--- a/templates/server.conf.j2
+++ b/templates/server.conf.j2
@@ -181,6 +181,6 @@ script-security 3 execve
 crl-verify {{openvpn_keydir}}/crl.pem
 {% endif %}
 
-{% for dns in openvpn_dns %}
+{% for dns in openvpn_dns_servers %}
 push "dhcp-option DNS {{ dns }}"
 {% endfor %}
