--- a/templates/server.conf.j2
+++ b/templates/server.conf.j2
@@ -30,7 +30,8 @@ cipher {{ openvpn_cipher }}
 # explicit unit number, such as tun0. On Windows, use "dev-node" for this. On
 # most systems, the VPN will not function unless you partially or fully disable
 # the firewall for the TUN/TAP interface.
-dev {{ openvpn_dev }}
+dev {{ openvpn_dev_name }}
+dev-type {{ openvpn_dev_type }}
 
 # SSL/TLS root certificate (ca), certificate (cert), and private key (key).
 # Each client and the server must have their own cert and key file.  The server
@@ -66,39 +67,23 @@ client-config-dir {{ openvpn_client_config_dir }}
 topology {{ openvpn_topology }}
 {% endif %}
 
-{% if openvpn_server and not openvpn_bridge %}
+{% if openvpn_server %}
 # Configure server mode and supply a VPN subnet for OpenVPN to draw client
 # addresses from. The server will take 10.8.0.1 for itself, the rest will be
 # made available to clients. Each client will be able to reach the server on
 # 10.8.0.1. Comment this line out if you are ethernet bridging. See the man
 # page for more info.
-server {{ openvpn_server }}
-{% endif %}
-{% if openvpn_bridge %}
-# Configure server mode for ethernet bridging.
-# You must first use your OS's bridging capability
-# to bridge the TAP interface with the ethernet
-# NIC interface.  Then you must manually set the
-# IP/netmask on the bridge interface, here we
-# assume 10.8.0.4/255.255.255.0.  Finally we
-# must set aside an IP range in this subnet
-# (start=10.8.0.50 end=10.8.0.100) to allocate
-# to connecting clients.  Leave this line commented
-# out unless you are ethernet bridging.
-server-bridge {{ openvpn_bridge.address }} {{ openvpn_bridge.netmask }} {{ openvpn_bridge.dhcp_start }} {{ openvpn_bridge.dhcp_end }}
-
-{% if ansible_os_family == 'RedHat' %}
-# Tap management through script
-up "/etc/openvpn/up.sh br-{{ openvpn_dev }}"
-down "/etc/openvpn/down.sh br-{{ openvpn_dev }}"
-script-security 2
-{% endif %}
+server {{ openvpn_server | ipaddr('network') }} {{ openvpn_server | ipaddr('netmask') }}
 {% endif %}
 
-# Maintain a record of client <-> virtual IP address associations in this file.
-# If OpenVPN goes down or is restarted, reconnecting clients can be assigned
-# the same virtual IP address from the pool that was previously assigned.
-ifconfig-pool-persist {{openvpn_ifconfig_pool_persist}}
+{% if openvpn_server_ipv6|length %}
+# Configure server mode and supply a VPN subnet for OpenVPN to draw client
+# addresses from. The server will take 10.8.0.1 for itself, the rest will be
+# made available to clients. Each client will be able to reach the server on
+# 10.8.0.1. Comment this line out if you are ethernet bridging. See the man
+# page for more info.
+server-ipv6 {{ openvpn_server_ipv6 }}
+{% endif %}
 
 # The keepalive directive causes ping-like messages to be sent back and forth
 # over the link so that each side knows when the other side has gone down. Ping
@@ -122,14 +107,6 @@ persist-tun
 # Output a short status file showing current connections, truncated and
 # rewritten every minute.
 status {{openvpn_status}}
-
-# By default, log messages will go to the syslog (or on Windows, if running as
-# a service, they will go to the "\Program Files\OpenVPN\log" directory). Use
-# log or log-append to override this default. "log" will truncate the log file
-# on OpenVPN startup, while "log-append" will append to it.  Use one or the
-# other (but not both).
-;log         openvpn.log
-log-append  {{openvpn_log}}
 
 # Set the appropriate level of log file verbosity.
 #
@@ -157,15 +134,6 @@ group nogroup
 
 {% if openvpn_client_to_client %}
 client-to-client
-{% endif %}
-
-{% if openvpn_use_pam %}
-client-cert-not-required
-plugin {{openvpn_use_pam_plugin|default(openvpn_use_pam_plugin_distribution)}} openvpn
-{% endif %}
-
-{% if openvpn_use_ldap %}
-plugin {{ openvpn_use_ldap_plugin | default(openvpn_use_ldap_plugin_distribution) }} "/etc/openvpn/auth-ldap.conf"
 {% endif %}
 
 {% if openvpn_simple_auth and openvpn_simple_auth_password %}
