--- a/templates/server.conf.j2
+++ b/templates/server.conf.j2
@@ -177,8 +177,10 @@ script-security 3 execve
 {{option}}
 {% endfor %}
 
-{% if crl_pem_file.stat.exists %}
-crl-verify {{ openvpn_keydir }}/crl.pem
+{% if openvpn_crl_mode == 'dir' %}
+crl-verify {{ openvpn_etcdir }}/crl/certs_by_serial 'dir'
+{% elif openvpn_crl_mode == 'file' %}
+crl-verify {{ openvpn_etcdir }}/crl/crl.pem
 {% endif %}
 
 {% for dns in openvpn_dns_servers %}
