--- a/templates/scripts/client-disconnect.sh.j2
+++ b/templates/scripts/client-disconnect.sh.j2
@@ -3,6 +3,11 @@
 {# openvpn_client_disconnect_log is a variable specific to this file and is not
 mentioned in $(defaults/main.yml) #}
 
+{%- if openvpn_client_disconnect_log is not defined -%}
+  {% set openvpn_client_disconnect_log = "{{
+    openvpn_script_output_directories[0] }}/disconnect.log" %}
+{%- endif -%}
+
 if [[ ! -e "{{ openvpn_client_disconnect_log }}" ]]; then
   echo 'time,common_name,external_ip' >"{{ openvpn_client_disconnect_log }}"
 fi
