Fix \n in server.conf

--- a/templates/server.conf.j2
+++ b/templates/server.conf.j2
@@ -15,7 +15,7 @@ port {{ openvpn_port }}
 # TCP or UDP server?
 proto {{ openvpn_proto }}
 
-% if openvpn_ipv6_enabled %}
+{% if openvpn_ipv6_enabled %}
 proto {{ openvpn_proto }}6
 {% endif %}
 
