update auth-ldap.conf.j2 to optionally check group and add all auth-ldap specific variables to defaults/main.yml

--- a/templates/authentication/auth-ldap.conf.j2
+++ b/templates/authentication/auth-ldap.conf.j2
@@ -45,10 +45,12 @@
   # e.g. "sAMAccountName=%u"
   SearchFilter  {{ openvpn_ldap_search_filter }}
   RequireGroup  true
+  {% if openvpn_ldap_group_search_filter %}
   <Group>
-    BaseDN    {{ openvpn_ldap_base_dn }}
+    BaseDN    {{ openvpn_ldap_group_base_dn | default(openvpn_ldap_base_dn) }}
     # e.g. "cn=OpenVPNUsers"
     SearchFilter  {{ openvpn_ldap_group_search_filter }}
     MemberAttribute Member
   </Group>
+  {% endif %}
 </Authorization>
