--- a/templates/server.conf.j2
+++ b/templates/server.conf.j2
@@ -172,7 +172,7 @@ plugin {{ openvpn_use_ldap_plugin | default(openvpn_use_ldap_plugin_distribution
 
 {% if openvpn_simple_auth and openvpn_simple_auth_password %}
 auth-user-pass-verify auth-client.sh via-env
-script-security 3 execve
+script-security 3
 {% endif %}
 
 {% for option in openvpn_server_options %}
