The option client-cert-not-required is deprecated with openvpn 2.4 and will be removed in openvpn 2.5. This is replaced with verify-client-cert none now

--- a/templates/server.conf.j2
+++ b/templates/server.conf.j2
@@ -162,7 +162,8 @@ client-to-client
 {% endif %}
 
 {% if openvpn_use_pam %}
-client-cert-not-required
+# client-cert-not-required ## Removed in openvpn 2.5
+verify-client-cert none
 plugin {{openvpn_use_pam_plugin|default(openvpn_use_pam_plugin_distribution)}} openvpn
 {% endif %}
 
