Add openvpn_ldap_config/openvpn_ldap_password_is_cr vars

--- a/templates/server.conf.j2
+++ b/templates/server.conf.j2
@@ -167,7 +167,7 @@ plugin {{openvpn_use_pam_plugin|default(openvpn_use_pam_plugin_distribution)}} o
 {% endif %}
 
 {% if openvpn_use_ldap %}
-plugin {{ openvpn_use_ldap_plugin | default(openvpn_use_ldap_plugin_distribution) }} "/etc/openvpn/auth-ldap.conf"
+plugin {{ openvpn_use_ldap_plugin | default(openvpn_use_ldap_plugin_distribution) }} "{{ openvpn_ldap_config }}"
 {% endif %}
 
 {% if openvpn_simple_auth and openvpn_simple_auth_password %}
