--- a/templates/server.conf.j2
+++ b/templates/server.conf.j2
@@ -54,15 +54,21 @@ dh {{ openvpn_keydir }}/dh.pem
 # Use a static pre-shared key (PSK)
 tls-auth {{ openvpn_etcdir }}/ovpns/{{ openvpn_tls_key }} 0
 tls-server
+{% if openvpn_tls_version_min is defined -%}
+tls-version-min {{ openvpn_tls_version_min }}
+{% endif %}
+{% if openvpn_tls_version_max is defined -%}
+tls-version-max {{ openvpn_tls_version_max }}
+{% endif %}
 {% endif %}
 
-# Client configuration directory.
 {% if openvpn_ccd is defined -%}
+# Client configuration directory.
 client-config-dir {{ openvpn_ccd }}
 {% endif %}
 
-# Which VPN topology to use? (net30, subnet, p2p)
 {% if openvpn_topology is defined -%}
+# Which VPN topology to use? (net30, subnet, p2p)
 topology {{ openvpn_topology }}
 {% endif %}
 
@@ -100,11 +106,11 @@ script-security 2
 # the same virtual IP address from the pool that was previously assigned.
 ifconfig-pool-persist {{ openvpn_ifconfig_pool_persist }}
 
+{% if openvpn_keepalive != '' %}
 # The keepalive directive causes ping-like messages to be sent back and forth
 # over the link so that each side knows when the other side has gone down. Ping
 # every 10 seconds, assume that remote peer is down if no ping received during
 # a 120 second time period.
-{% if openvpn_keepalive != '' %}
 keepalive {{ openvpn_keepalive }}
 {% endif %}
 
@@ -160,17 +166,14 @@ group nogroup
 {% if openvpn_client_to_client %}
 client-to-client
 {% endif %}
-
 {% if openvpn_use_pam %}
 # client-cert-not-required ## Removed in openvpn 2.5
 verify-client-cert none
 plugin {{openvpn_use_pam_plugin|default(openvpn_use_pam_plugin_distribution)}} openvpn
 {% endif %}
-
 {% if openvpn_use_ldap %}
 plugin {{ openvpn_use_ldap_plugin | default(openvpn_use_ldap_plugin_distribution) }} "/etc/openvpn/auth-ldap.conf"
 {% endif %}
-
 {% if openvpn_simple_auth and openvpn_simple_auth_password %}
 auth-user-pass-verify auth-client.sh via-env
 script-security 3
