Replaces comp_lzo config with compression

--- a/templates/server.conf.j2
+++ b/templates/server.conf.j2
@@ -110,10 +110,8 @@ keepalive {{ openvpn_keepalive }}
 
 # Enable compression on the VPN link. If you enable it here, you must also
 # enable it in the client config file.
-{% if openvpn_comp_lzo -%}
-comp-lzo
-{% else -%}
-;comp-lzo
+{% if openvpn_compression -%}
+{{ openvpn_compression }}
 {% endif %}
 
 # The persist options will try to avoid accessing certain resources on restart
