--- a/templates/client.conf.j2
+++ b/templates/client.conf.j2
@@ -73,10 +73,8 @@ tls-auth {{openvpn_tls_key}} 1
 
 # Enable compression on the VPN link. Don't enable this unless it is also
 # enabled in the server config file.
-{% if openvpn_comp_lzo -%}
-comp-lzo
-{% else -%}
-;comp-lzo
+{% if openvpn_compression -%}
+{{ openvpn_compression }}
 {% endif %}
 
 # Set log file verbosity.
