Replaces ciphers config with ncp-ciphers

--- a/templates/client.conf.j2
+++ b/templates/client.conf.j2
@@ -15,8 +15,9 @@ dev {{ openvpn_dev }}
 # server.
 proto {{ openvpn_proto }}
 
-# Encrypt packets with cipher algorithm
-cipher {{ openvpn_cipher }}
+{% if openvpn_ncp_ciphers | length %}
+ncp-ciphers {{ openvpn_ncp_ciphers }}
+{% endif %}
 
 # The hostname/IP and port of the server. You can have multiple remote entries
 # to load balance between the servers.
