Fixes client template

--- a/templates/client.conf.j2
+++ b/templates/client.conf.j2
@@ -1,6 +1,6 @@
 # {{ ansible_managed }}
 
-{%- set client=item -%}
+{%- set client=_openvpn__client -%}
 
 # Specify that we are a client and that we will be pulling certain config file
 # directives from the server.
