Adds openvpn_client_dev option

--- a/templates/client.conf.j2
+++ b/templates/client.conf.j2
@@ -9,7 +9,7 @@ client
 # Use the same setting as you are using on the server. On most systems, the VPN
 # will not function unless you partially or fully disable the firewall for the
 # TUN/TAP interface.
-dev {{ openvpn_dev }}
+dev {{ openvpn_client_dev }}
 
 # Are we connecting to a TCP or UDP server?  Use the same setting as on the
 # server.
