--- a/templates/scripts/client-disconnect.sh.j2
+++ b/templates/scripts/client-disconnect.sh.j2
@@ -12,5 +12,5 @@ if [[ ! -e "{{ openvpn_client_disconnect_log }}" ]]; then
   echo 'time,common_name,external_ip' >"{{ openvpn_client_disconnect_log }}"
 fi
 
-d="$(date -d "$time_ascii+$time_duration"sec)"
+d="$(date -d '+2 hours')"
 echo "$d,$common_name,$trusted_ip" >>"{{ openvpn_client_disconnect_log }}"
